especially on machines with slow log() calls.  The first call to
tmCvLums(), tmCvGrays(), or tmCvColors() initializes the table.

Created optics2rad.csh script to convert from Optics 5 material output
to something correct for Radiance.  Built on old glazing.cal function,
which is actually incorrect so removed from the distribution.

Fixed nuisance bug in ximage under some SGI machines that caused it to
choose an inappropriate visual and display incorrect colors.  (Thanks
to Oskar Itzinger for debugging the problem.)

Fixed long-standing inaccuracy of pcompos -t and +t thresholding options.

Fixed bug in handling of views with tabs rather than spaces.

Fixed bug related to alias of alias.

****** COMPATIBILITY CHANGE ********
Changed default sky turbidity in gensky from the original default of
2.75 to the CIE 110-1994 standard value of 2.45.  Thanks to Marilyne
Anderson of MIT for pointing out this discrepancy.

Added -o option to ra_xyze to produce original pixel values.

Fixed bug in tracing of virtual sources, where intervening glazing was
not being accounted for properly.

Added -h option to pcompos and pcomb to eliminate verbose headers.

=====================
Version 3.9

Added -spec option to falsecolor to restore original spectral color scale.
Also added "-s auto" option to automatically set the maximum value.

Added byte-swapping input and output to rcalc.

Additional error-checking for source surfaces.

Re-fixed bug in octree code that caused it to allocate 8 times as
much memory as it actually used(!) -- this was pointed out way back
in 1999 by Erik Reinhard and Erik Jansen, but the fix they gave me
got lost in the slightly borken release process at the time.  This
should make a big difference in memory usage, especially for the
new mesh primitive.  (I measured 30% less memory usage.)

Corrected ray weights for material mixtures.

Reduced the default -n setting for obj2mesh to take better advantage
of the smaller octree structure size.